Undid "Immortal" name change Fixed json errors Added Korean and Czech flags

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -540,7 +540,7 @@
 		Simplified_Chinese:"组建骑乘单位时产能积累速率+15%"
 		Polish:"+15% do produkcji jednostek kawalerii"
 		Russian:"+15% Производство при постройке конных юнитов в данном городе"
-		Czech:""+15% produkce při výstavbě jízdních jednotek v tomto městě
+		Czech:"+15% produkce při výstavbě jízdních jednotek v tomto městě"
 }
 
 	"Circus Maximus":{
