--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1115,7 +1115,7 @@
 		French:"Points de personnage illustre"
 		Portuguese:"Pontos de grandes pessoas"
 		Russian:"Очки великих людей"
-		Czech:"Body Velké osobnosti
+		Czech:"Body Velké osobnosti"
 }
 
 	"Current points":{
@@ -1889,7 +1889,7 @@
 		Russian:"Вы победили, завоевав всех!"
 		Simplified_Chinese:"恭喜！你赢得了征服胜利！"
 		Portuguese:"Você ganhou uma vitória de dominação!",
-		Czech:"Dosáhli jste vítězství díky dominanci!
+		Czech:"Dosáhli jste vítězství díky dominanci!"
 }
 // TODO (4)
 	"You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart.":{
