--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -2080,7 +2080,7 @@
 		Simplified_Chinese:"治疗I"
 		French:"Médecin"
 		Russian:"Медик"
-		Czech:"Zdravotník I
+		Czech:"Zdravotník I"
 }
 
 	"This unit and all others in adjacent tiles heal 5 additional HP per turn":{
