--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2075,7 +2075,7 @@
 	"The population will gradually dwindle until the city is destroyed.":{
 		Italian:"La popolazione diminuirà gradualmente fino alla distruzione della città."
 		Czech:"Populace se bude postupně snižovat, až do úplného zmizení z mapy.."
-		Simplified_Chinese:"人口将会持续地减少直至该城市被完全摧毁。"
+		Simplified_Chinese:"城市人口将会持续地减少直至该城市被完全摧毁。"
 }
 
 
