--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1300,7 +1300,7 @@
 		Czech:"Moderní tank"
 }
 
-	"B17,":{ // american unique
+	"B17":{ // american unique
 		Italian:"B-17"
 		Romanian:"B17"
 		Spanish:"B-17"
