Renamed "Immortal" to "Persian Immortal" because of the conflict in naming between the unit and the difficulty Also, changed existing units of Immortal or with Range promotion

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -424,7 +424,7 @@
 		Czech:"Hoplita"
 }
 
-	"Immortal":{ // Persian unique
+	"Persian Immortal":{ // Persian unique
 		Italian:"Immortale"
 		Simplified_Chinese:"波斯长生军"
 		Czech:"Nesmrtelný"
