Changed options for "Show worked tiles" and "Show resources and improvements" because it was less clear than the other options

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -821,7 +821,7 @@
 		Czech:"Schovat"
 }
 
-	"Worked tiles":{
+	"Show worked tiles":{
 		Italian:"Celle sfruttate"
 		Russian:"Обрабатываемые клетки"
 		French:"cases exploités"
