--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -892,6 +892,7 @@
 		Italian:"Costruzione strade automatica"
                 Korean:"도로 자동 건설"
 		Czech:"Automatická vystavba cest"
+		Simplified_Chinese:"自动建造道(铁)路"
 }
 
 	"Show minimap":{
