--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -291,7 +291,7 @@
 		German:"Befestigung"
 		Dutch:"Versterking"
 		Spanish:"Fortificación"
-		Simplified_Chinese:"驻守防御力+"
+		Simplified_Chinese:"驻守防御力加成"
 		Portuguese:"Fortficação"
 		Japanese:"要塞"
 		Czech:"Opevnění"
